# fastapi-directory-app-test-task

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
directory-app/: .env  alembic.ini  main.py
directory-app/alembic/versions/: d06f7f373754_initial.py  ea1f59502d84_initial.py
directory-app/api/api_v1/: __init__.py  organizations.py  test.py
directory-app/api/dependencies/: api_key.py
directory-app/core/: config.py
directory-app/core/models/: __init__.py  activity.py  base.py  building.py  organization.py  organization_activity.py
directory-app/core/schemas/: activity.py  building.py  organization.py  organizations_activities.py  search_radius.py
directory-app/crud/: organizations.py  test.py
directory-app/utils/: calculate_radius.py
