[project]
name = "directory-app-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Stepan Karpov",email = "stepan-karpov-2025@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn[standart] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpq (>=0.44,<0.45)",
    "alembic (>=1.17.0,<2.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
